Add templatization demo

--- a/demos/index.html
+++ b/demos/index.html
@@ -22,6 +22,7 @@
   <li><a href="polyfillExplorer/" target="_blank">Test the File polyfill</a></li>
   <li><a href="sanitizer/" target="_blank">Sanitize HTML or JSON</a></li>
   <li><a href="searchGroupCategories/" target="_blank">Search for groups using combinations of categories</a></li>
+  <li><a href="templatization/" target="_blank">See example of template replacement</a></li>
 </ol>
 </body>
 </html>
