--- a/demos/templatization/index.html
+++ b/demos/templatization/index.html
@@ -19,7 +19,7 @@
    | limitations under the License.
   -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="http://esri.github.io/calcite-bootstrap/styles/calcite-bootstrap.min.css">
+  <link rel="stylesheet" href="https://esri.github.io/calcite-bootstrap/styles/calcite-bootstrap.min.css">
   <style>
   body {
     padding: 8px;
@@ -165,7 +165,7 @@
             {
               "id": "layer0",
               "layerType": "ArcGISTiledMapServiceLayer",
-              "url": "http://services.arcgisonline.com/arcgis/rest/services/Canvas/World_Dark_Gray_Base/MapServer",
+              "url": "https://services.arcgisonline.com/arcgis/rest/services/Canvas/World_Dark_Gray_Base/MapServer",
               "visibility": true,
               "opacity": 1,
               "title": "Dark Gray Canvas"
@@ -173,7 +173,7 @@
             {
               "id": "World_Dark_Gray_Reference_8618",
               "layerType": "ArcGISTiledMapServiceLayer",
-              "url": "http://services.arcgisonline.com/arcgis/rest/services/Canvas/World_Dark_Gray_Reference/MapServer",
+              "url": "https://services.arcgisonline.com/arcgis/rest/services/Canvas/World_Dark_Gray_Reference/MapServer",
               "visibility": true,
               "opacity": 1,
               "title": "World_Dark_Gray_Reference",
