remove field references from views that are not in the source service when the source service was pre-deployed

--- a/demos/deploySolution/index.html
+++ b/demos/deploySolution/index.html
@@ -49,7 +49,8 @@
   <div id="container" style="display:none">
     <div id="input">
       <label for="solutionId">Enter a Solution ID:</label>
-      <input class="form-control" type="text" id="solutionId">
+      <input class="form-control" type="text" id="solutionId" value="0849017aeae3498aa181af8d816a7eba">
+      <!-- <input class="form-control" type="text" id="solutionId" value="832476c16ee54af28f7643978a988a20"> -->
       <label for="id">Or pick from the list below:</label>
       <select name="Solution Item" id="id" class="form-control"></select>
 
@@ -59,15 +60,16 @@
 
       <div class="labeledItem">
         <label for="srcUsername">Username:&nbsp;</label>
-        <input type="text" id="srcUsername" placeholder="anonymous">
+        <input type="text" id="srcUsername" placeholder="anonymous" value="creator1">
       </div>
       <div class="labeledItem">
         <label for="srcPassword">Password:&nbsp;</label>
-        <input type="password" id="srcPassword">
+        <input type="password" id="srcPassword" value="portalaccount1">
       </div>
       <div class="labeledItem">
         <label for="srcPortal">Portal:&nbsp;</label>
-        <input type="text" id="srcPortal" style="width:256px" placeholder="https://www.arcgis.com">
+        <input type="text" id="srcPortal" style="width:256px" placeholder="https://www.arcgis.com" value="https://dev0016874.esri.com/portal/">
+        <!-- <input type="text" id="srcPortal" style="width:256px" placeholder="https://www.arcgis.com" value="https://rqawinbi01pt.ags.esri.com/gis"> -->
       </div>
 
       <br/><br/>
@@ -76,15 +78,16 @@
 
       <div class="labeledItem">
         <label for="destUsername">Username:&nbsp;</label>
-        <input type="text" id="destUsername">
+        <input type="text" id="destUsername" value="creator1">
       </div>
       <div class="labeledItem">
         <label for="destPassword">Password:&nbsp;</label>
-        <input type="password" id="destPassword">
+        <input type="password" id="destPassword" value="portalaccount1">
       </div>
       <div class="labeledItem">
         <label for="destPortal">Portal:&nbsp;</label>
-        <input type="text" id="destPortal" style="width:256px" placeholder="https://www.arcgis.com">
+        <input type="text" id="destPortal" style="width:256px" placeholder="https://www.arcgis.com" value="https://dev0016874.esri.com/portal/">
+        <!-- <input type="text" id="destPortal" style="width:256px" placeholder="https://www.arcgis.com" value="https://rqawinbi01pt.ags.esri.com/gis"> -->
       </div>
 
       <br /><br />
