--- a/demos/index.html
+++ b/demos/index.html
@@ -11,6 +11,7 @@
   <li><a href="sanitizeGroupItems/" target="_blank">Check the items in a group for unsafe content</a></li>
   <li><a href="compareJSON/" target="_blank">Compare two blocks of JSON, with the option to generate the second block as a sanitized version of the first block</a></li>
   <li><a href="convertExtent/" target="_blank">Convert either default AGO extents or specified AGO portal's extents to WGS 84</a></li>
+  <li><a href="copyItem/" target="_blank">Copy an item</a></li>
   <li><a href="copySolutions/" target="_blank">Copy one or more solutions between organizations</a></li>
   <li><a href="createSolution/" target="_blank">Create a Solution</a></li>
   <li><a href="createFolder/" target="_blank">Create an AGO folder</a></li>
@@ -18,7 +19,6 @@
   <li><a href="getItemInfo/" target="_blank">Get information about an item</a></li>
   <li><a href="implementedTypes/" target="_blank">List the AGO types that are implemented or being worked on</a></li>
   <li><a href="getGroupInfo/" target="_blank">List the ids of the items in a group</a></li>
-  <li><a href="copyItemInfo/" target="_blank">Make a copy of an item</a></li>
   <li><a href="polyfillExplorer/" target="_blank">Test the File polyfill</a></li>
   <li><a href="sanitizer/" target="_blank">Sanitize HTML or JSON</a></li>
   <li><a href="searchGroupCategories/" target="_blank">Search for groups using combinations of categories</a></li>
