--- a/demos/deploySolution/index.html
+++ b/demos/deploySolution/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>@esri/solution-deployer deploySolution example</title>
+  <title>deploySolution example</title>
   <!--
    | Copyright 2019 Esri
    |
@@ -158,8 +158,6 @@
           var solutionId = document.getElementById("solutionId").value || document.getElementById('id').value;
 
           // Source credentials
-          //const srcUsername = document.getElementById("srcUsername").value;
-          //const srcPassword = document.getElementById("srcPassword").value;
           const srcPortal = (document.getElementById("srcPortal").value || "https://www.arcgis.com") + "/sharing/rest";
           const srcCreds = new auth.UserSession({
             username: document.getElementById("srcUsername").value,
