--- a/demos/getGroupInfo/index.html
+++ b/demos/getGroupInfo/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>@esri/solution-common getGroupInfo example</title>
+  <title>getGroupInfo example</title>
   <!--
    | Copyright 2019 Esri
    |
