--- a/demos/searchGroupCategories/index.html
+++ b/demos/searchGroupCategories/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>@esri/solution-common searchGroupCategories example</title>
+  <title>searchGroupCategories example</title>
   <!--
    | Copyright 2020 Esri
    |
