Added deleteSolution demo

--- a/demos/index.html
+++ b/demos/index.html
@@ -14,6 +14,7 @@
   <li><a href="copySolutions/" target="_blank">Copy one or more solutions between organizations</a></li>
   <li><a href="createSolution/" target="_blank">Create a Solution</a></li>
   <li><a href="createFolder/" target="_blank">Create an AGO folder</a></li>
+  <li><a href="deleteSolution" target="_blank">Delete a Solution</a></li>
   <li><a href="deploySolution/" target="_blank">Deploy a Solution</a></li>
   <li><a href="getItemInfo/" target="_blank">Get information about an item</a></li>
   <li><a href="implementedTypes/" target="_blank">List the AGO types that are implemented or being worked on</a></li>
