Clear extant error message when displaying results of delete pre-check

--- a/demos/deleteSolution/index.html
+++ b/demos/deleteSolution/index.html
@@ -120,6 +120,7 @@
           ).then(
             html => {
               document.getElementById("checkOutput").innerHTML = html;
+              document.getElementById("output").innerHTML = "";
               document.getElementById("check").style.display = "block";
               document.getElementById("deleteBtn").style.display = "none";
             },
