--- a/demos/createSolution/index.html
+++ b/demos/createSolution/index.html
@@ -40,14 +40,14 @@
         <p>Create a solution item from the contents of a group or from a single item and its dependencies.</p>
         <div id="input" class="form-group" style="display:none">
           <label for="itemOrGroupId">Enter an Item or Group ID:</label>
-          <input class="form-control" type="text" id="itemOrGroupId">
+          <input class="form-control" type="text" id="itemOrGroupId" value="a728f0cf8bdc4fb19749cc1cbad1651b">
           <label for="id">Or pick from the list below:</label>
           <select name="Solution Item" id="id" class="form-control">
           </select>
           <br />
           <i>Credentials in destination organization:</i><br />
-          <label for="username">username:&nbsp;</label><input type="text" class="form-control" id="username" value="">
-          <label for="password">password:&nbsp;</label><input type="password" class="form-control" id="password" value="">
+          <label for="username">username:&nbsp;</label><input type="text" class="form-control" id="username" value="LocalGovDeployJohnH">
+          <label for="password">password:&nbsp;</label><input type="password" class="form-control" id="password" value="password2">
           <label for="password">Portal:</label>
           <input type="text" id="portal" class="form-control" value="https://www.arcgis.com">
           <br>
@@ -85,6 +85,7 @@
         "@esri/solution-storymap": "../node_modules/@esri/solution-storymap/dist/umd/storymap.umd",
         "@esri/solution-form": "../node_modules/@esri/solution-form/dist/umd/form.umd",
         "@esri/solution-web-experience": "../node_modules/@esri/solution-web-experience/dist/umd/web-experience.umd",
+        "@esri/solution-velocity": "../node_modules/@esri/solution-velocity/dist/umd/velocity.umd",
         "adlib": "../node_modules/adlib/dist/adlib",
         "tslib": "../node_modules/tslib/tslib"
       }
