--- a/demos/deploySolution/index.html
+++ b/demos/deploySolution/index.html
@@ -130,6 +130,7 @@
         "@esri/solution-simple-types": "../node_modules/@esri/solution-simple-types/dist/umd/simple-types.umd",
         "@esri/solution-hub-types": "../node_modules/@esri/solution-hub-types/dist/umd/hub-types.umd",
         "@esri/solution-storymap": "../node_modules/@esri/solution-storymap/dist/umd/storymap.umd",
+        "@esri/solution-velocity": "../node_modules/@esri/solution-velocity/dist/umd/velocity.umd",
         "@esri/solution-web-experience": "../node_modules/@esri/solution-web-experience/dist/umd/web-experience.umd",
         "adlib": "../node_modules/adlib/dist/adlib",
         "tslib": "../node_modules/tslib/tslib"
