--- a/demos/deploySolution/authenticate.html
+++ b/demos/deploySolution/authenticate.html
@@ -2,16 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>ArcGIS Rest JS OAuth redirect</title>
+    <title>Solution OAuth redirect</title>
   </head>
   <body>
     <script src="node_modules/@esri/arcgis-rest-request/dist/umd/request.umd.js"></script>
     <script src="node_modules/@esri/arcgis-rest-auth/dist/umd/auth.umd.js"></script>
     <script>
-      /* in a production app, clientId could be hardcoded. here we're using a regex to extract it from the state parameter in the OAuth2 server response to make the demo more interchangeable.
-
-      this relies on the fact that the ClientId is associated with the state parameter internally when another value isn't supplied manually.
-      */
       const match = window.location.href.match(
         /&state=([^&]+)/
       );
