--- a/demos/deploySolution/index.html
+++ b/demos/deploySolution/index.html
@@ -97,16 +97,17 @@
         </div>
       </div>
 
-      <div id="clientIdParent" class="labeledItem display-none">
+      <div id="clientIdParent" class="display-none">
         <label for="clientId">Client ID&nbsp;</label>
         <input type="text" id="clientId">
-        <div class="labeledItem">
-          <span class="labeledItem">To obtain client ID:</span>
+        <div>
+          <span class="labeledItem">To work with client ID:</span>
           <ol>
             <li>cd to the demos directory</li>
             <li>run "npm start"</li>
             <li>Create an application on the <a target="_blank" href="https://developers.arcgis.com/documentation/mapping-apis-and-services/security/arcgis-identity/serverless-web-apps/">ArcGIS for Developers</a> website.</li>
             <li>Add one of the urls listed from "npm start" as a redirect uri for your application.</li>
+            <li>Open the deploySolution demo using the url from above and Copy/Paste clientId</li>
           </ol>
         </div>
       </div>
@@ -255,7 +256,6 @@
             deploySolution(destCreds);
           } else {
             const redirect_uri = window.location.origin + window.location.pathname;
-            alert(redirect_uri);
             const clientId = document.getElementById("clientId").value;
             auth.UserSession.beginOAuth2({
               clientId: clientId,
