--- a/demos/deploySolution/authenticate.html
+++ b/demos/deploySolution/authenticate.html
@@ -3,6 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>Solution OAuth redirect</title>
+    <!--
+      | Copyright 2019 Esri
+      |
+      | Licensed under the Apache License, Version 2.0 (the "License");
+      | you may not use this file except in compliance with the License.
+      | You may obtain a copy of the License at
+      |
+      |    http://www.apache.org/licenses/LICENSE-2.0
+      |
+      | Unless required by applicable law or agreed to in writing, software
+      | distributed under the License is distributed on an "AS IS" BASIS,
+      | WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+      | See the License for the specific language governing permissions and
+      | limitations under the License.
+    -->
   </head>
   <body>
     <script src="node_modules/@esri/arcgis-rest-request/dist/umd/request.umd.js"></script>
