--- a/demos/deploySolution/index.html
+++ b/demos/deploySolution/index.html
@@ -74,9 +74,9 @@
 
       <label for="solutionId">Enter a Solution ID:</label>
       <input class="form-control" type="text" id="solutionId">
-      <label for="id">Or pick a Solution from the list below:</label>
+      <label for="solutionPicklist">Or pick a Solution from the list below:</label>
       <select name="Solution Item" id="solutionPicklist" class="form-control"></select>
-      <label for="solutionPicklist">Or deploy all Solutions in a folder from the list below:</label>
+      <label for="foldersPicklist">Or deploy all Solutions in a folder from the list below:</label>
       <button id="fetchFoldersBtn fader" onclick="fetchFoldersFcn()">Fetch</button>
       <select name="Solution Folder" id="foldersPicklist" class="form-control"></select>
 
